# BladeBlade2

./: .gitignore  Cargo.toml  Installer.iss  README.md  TODO  build.rs  ideas  options.cfg
data/: Terrain.tsx  archer.cfg  arrow_cold.cfg  arrow_lightning.cfg  arrow_magic.cfg  arrow_normal.cfg  arrow_rare.cfg  basic_pixel.glsl  circle.cfg  cold_enchanted.cfg  cold_hit.cfg  crystal_blue.cfg  crystal_green.cfg  crystal_pips.cfg  crystal_red.cfg  damager.cfg  dist_pixel.glsl  dist_vertex.glsl  doodad.cfg  exit.cfg  explosion.cfg  fire_enchanted.cfg  fire_hit.cfg  fire_hit_anim.cfg  fireball_anim.cfg  game.cfg  ignited.cfg  inventory_cell.cfg  inventory_center_bkg.cfg  inventory_panel_bl.cfg  inventory_panel_r.cfg  inventory_panel_tl.cfg  item.cfg  jump_pixel.glsl  jump_vertex.glsl  lightning_enchanted.cfg  lightning_hit.cfg  logo.cfg  map_0.tmx  map_1.tmx  (+42 more)
src/: components.rs  controls.rs  game.rs  game_state.rs  main.rs  menu.rs  palette.rs  sfx.rs  sprite.rs  ui.rs  utils.rs
