[package]
name = "BladeBlade2"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
authors = ["SiegeLord <slabode@aim.com>"]
build = "build.rs"

[dependencies]

allegro-sys = { version="0.0.47" }
allegro = { version="0.0.47" }
allegro_dialog = { version="0.0.47" }
allegro_image = { version="0.0.47" }
allegro_font = { version="0.0.47" }
allegro_ttf = { version="0.0.47" }
allegro_acodec = { version="0.0.47" }
allegro_audio = { version="0.0.47" }
allegro_primitives = { version="0.0.47" }
allegro_color = { version="0.0.47" }

#allegro-sys = { path = "/home/siege/Projects/RustAllegro/allegro-sys" }
#allegro = { path = "/home/siege/Projects/RustAllegro/allegro" }
#allegro_dialog = { path = "/home/siege/Projects/RustAllegro/allegro_dialog" }
#allegro_image = { path = "/home/siege/Projects/RustAllegro/allegro_image" }
#allegro_font = { path = "/home/siege/Projects/RustAllegro/allegro_font" }
#allegro_ttf = { path = "/home/siege/Projects/RustAllegro/allegro_ttf" }
#allegro_acodec = { path = "/home/siege/Projects/RustAllegro/allegro_acodec" }
#allegro_audio = { path = "/home/siege/Projects/RustAllegro/allegro_audio" }
#allegro_primitives = { path = "/home/siege/Projects/RustAllegro/allegro_primitives" }
#allegro_color = { path = "/home/siege/Projects/RustAllegro/allegro_color" }

bimap = { version="0.6.2", features = ["serde"] }
hecs = "0.10.5"
slr_config = "0.0.22"
nalgebra = "0.31.1"
rand = "0.8.5"
serde = "1.0.142"
serde_derive = "1.0.142"
tiled = "0.13.0"
rect_packer = "0.2.1"
memoffset = "0.9"
glob = "0.3.1"

[build-dependencies]
winresource = "0.1"

[profile.release]
debug = true

[features]
use_user_settings = []
